--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="row"><h3 style="font-family: 'Courgette', cursive; font-size: 150%;">a Web Developer.</h3></div><br>
 					</center>
 				</div>
-				<div class="col-sm-3" style="width: auto; height: 100%;">
+				<div class="col-sm-3" style="width: 25%; height: auto;">
 					<img src="polotno (5) (1).png" alt="right">
 				</div>
 			</div>
