--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<div class="container-fluid container-1 text-white">
 		<div class="container mt-conatiner-1" style="padding-bottom: 0;">
 			<div class="row" style="justify-content: center;justify-items: center;">
-				<div class="col-sm-3" style="width: auto; height: 100%;">
+				<div class="col-sm-3" style="width: 75%; height: auto;justify-content: left;">
 					<img src="polotno (4) (1).png" alt="left">
 				</div>
 				<div class="col-sm-6" style="padding: 5rem 0;">
@@ -61,11 +61,11 @@
 						<div class="row"><h3 style="font-family: 'Courgette', cursive; font-size: 150%;">a Web Developer.</h3></div><br>
 					</center>
 				</div>
-				<div class="col-sm-3" style="width: 25%; height: auto;">
+				<div class="col-sm-3" style="width: 75%; height: auto;">
 					<img src="polotno (5) (1).png" alt="right">
 				</div>
 			</div>
-			<div class="row" style="width: auto; height: auto;">
+			<div class="row" style="width: 100%; height: auto;justify-content: right;">
 			<img src="polotno (3) (1).png" alt="mainbg">
 			</div>
 		</div>
@@ -74,7 +74,7 @@
 		<div class="row content-box" style="padding: 1.5rem;">
 			<center>
 				<h1 style="font-size: 350%;color: #065E6D;">ABOUT ME</h1><br><br>
-				<img src="dj-boy.png" alt="Developer"  style="width: 50%; height: auto;"><br><br><br>
+				<img src="dj-boy.png" alt="Developer"  class="dev-img"><br><br><br>
 				<p class="content">I'm a Web Designer/Developer <br> Based In Telangana, India. <br>Web Designing And Developing is my passion  <br>and I love to make them more attractive and better</p><br><br>
 				<h1 style="font-size: 400%;color: #065E6D;">What I Can Do</h1><br><br>
 				<div class="row">
