--- a/index.html
+++ b/index.html
@@ -36,14 +36,8 @@
 				<li class="nav-item navbar-item" style="font-size: 125%;font-weight:400;padding:0 1rem;">
 					<a href="index.html" class="nav-link">About Me</a>
 				</li>
-				<li class="nav-item navbar-item" style="font-size: 125%;font-weight: 400;padding: 0 1rem;">
-					<a href="#" class="nav-link">Portfolio</a>
-				</li>
 				<li class="nav-item navbar-item" style="font-size: 125%;font-weight:400;padding:0 1rem;">
-					<a href="#" class="nav-link">Services</a>
-				</li>
-				<li class="nav-item navbar-item" style="font-size: 125%;font-weight:400;padding:0 1rem;">
-					<a href="#" class="nav-link">Contact Me</a>
+					<a href="contact-me.html" class="nav-link">Contact Me</a>
 				</li>
 			</ul>
 			</div>
